<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <Button
        android:id="@+id/size_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size" />

    <Button
        android:id="@+id/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed" />

    <SeekBar
        android:id="@+id/speed_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:max="10"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progress="6" />

</LinearLayout>